--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,18 +5,19 @@ Authors@R: c(person("Lotfi", "Slim", email = "lotfi.slim@mines-paristech.fr", ro
   person("Clément", "Chatelain", email = "clement.chatelain@sanofi.com", role = "ctb"),
   person("Chloé-Agathe", "Azencott", email = "chloe-agathe.azencott@mines-paristech.fr", role ="ctb"),
   person("Jean-Philippe", "Vert", email = "jpvert@google.com", role ="ctb"))
-Description: Functions to perform robust epistasis detection in genome-wide 
+Description: Functions to perform robust epistasis detection in genome-wide
   association studies, as described in Slim et al. (2018) <doi:10.1101/442749>.
-  The implemented methods identify pairwise interactions between a particular 
-  target variant and the rest of the genotype, using a propensity score 
+  The implemented methods identify pairwise interactions between a particular
+  target variant and the rest of the genotype, using a propensity score
   approach. The propensity score models the linkage disequilibrium between the
-  target and the rest of the genotype. All methods are penalized regression 
-  approaches, which differently incorporate the propensity score to only 
-  recover the synergistic effects between the target and the genotype. 
-Depends: R (>= 3.3.2)
+  target and the rest of the genotype. All methods are penalized regression
+  approaches, which differently incorporate the propensity score to only
+  recover the synergistic effects between the target and the genotype.
+Depends: R (>= 3.4.0)
 Imports: matrixStats, DescTools, glmnet, SNPknock
 Suggests: foreach, iterators, snow, doSNOW, snpStats, WGCNA, precrec, bigpca, bigmemory, biglasso,
     testthat
 License: GPL (>=2)
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.0.9000
