Vignette: completed the case study bib: removed .abstract from Slim2018 stability: corrected latex mistake in \eqn data: add doc for maf, propensity and genotypes methods: corrected doc latex mistakes likelihood: corrected doc latex mistakes hmm_data: removed hmm_data file DESCRIPTION: added kableExtra

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,8 @@ Suggests:
     biglasso,
     testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    kableExtra
 License: GPL (>=2)
 Encoding: UTF-8
 LazyData: true
