conditional loading of suggested pkgs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: epiGWAS
 Title: Robust Methods for Epistasis Detection
-Version: 1.0.1
+Version: 1.0.2
 Authors@R: c(person("Lotfi", "Slim", email = "lotfi.slim@mines-paristech.fr", role = c("aut", "cre")),
   person("Clément", "Chatelain", email = "clement.chatelain@sanofi.com", role = "ctb"),
   person("Chloé-Agathe", "Azencott", email = "chloe-agathe.azencott@mines-paristech.fr", role ="ctb"),
@@ -14,12 +14,11 @@ Description: Functions to perform robust epistasis detection in genome-wide
   approaches, which differently incorporate the propensity score to only
   recover the synergistic effects between the target and the genotype.
 Depends: R (>= 3.4.0)
-Imports: matrixStats, DescTools, glmnet, SNPknock
+Imports: matrixStats, DescTools, glmnet, SNPknock, parallel
 Suggests:
     foreach,
     iterators,
     precrec,
-    parallel,
     doParallel,
     bigmemory,
     biglasso,
